fix: header navigation z-index

--- a/src/shared/layouts/Header/Header.module.scss
+++ b/src/shared/layouts/Header/Header.module.scss
@@ -75,6 +75,7 @@
   display: flex;
   gap: 20px;
   align-items: center;
+  z-index: 1;
 }
 .item {
   color: #000;
